--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ Pygments==2.17.2
 pyparsing==3.1.4
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 python-slugify==8.0.4
 pytz==2024.1
