--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.1
 contourpy==1.3.0
+cryptography==44.0.0
 cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
@@ -51,6 +52,7 @@ MarkupSafe==2.1.4
 matplotlib==3.9.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
+msal==1.31.1
 nbclient==0.9.0
 nbconvert==7.14.2
 nbformat==5.9.2
@@ -73,6 +75,7 @@ psutil==5.9.8
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.17.2
+PyJWT==2.10.1
 pyparsing==3.1.4
 PySocks==1.7.1
 python-dateutil==2.8.2
